frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: shashank8617/fooddelivery-backend:latest  # Update this line with the actual image name
        ports:
        - containerPort: 4000
