admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
      - name: admin
        image: shashank8617/fooddelivery:admin  # Replace with your Docker image
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: admin
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: admin
